--- a/style/comps/_header.scss
+++ b/style/comps/_header.scss
@@ -3,7 +3,7 @@
 header {
   height: 5rem;
   width: fit-content;
-  margin: var(--marge);
+  margin: var(--inside-margin);
   position: sticky;
   top: var(--marge);
   z-index: 10;
@@ -15,6 +15,12 @@ header {
 
   @media (max-width: 900px) {
     height: 3rem;
+    margin: var(--inside-margin);
+    top: var(--inside-margin);
+  }
+
+  @media (max-width: 1500px) {
+    height: 4rem;
     margin: var(--inside-margin);
     top: var(--inside-margin);
   }
